--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ lib_deps =
 	bodmer/TFT_eSPI@^2.5.33
 	bodmer/TFT_eWidget@^0.0.6
 	bodmer/TJpg_Decoder@^1.0.8
+	plerup/EspSoftwareSerial@^8.1.0
 build_flags = 
 	-Os
 	-DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
